# accenture_song_assignment

./: .envexample  .gitignore  README.md  etl_methods.ipynb  pyproject.toml  requirements.txt
data/processed_gold/: gold_customers.csv
data/raw/csv/: customers.csv
data/raw/documents/: fraud_guidelines.txt
data/raw/documents/.ipynb_checkpoints/: customer_support_faq-checkpoint.txt  product_policy-checkpoint.txt
notebooks/: 01_data_exploration.ipynb  02_etl_methods.ipynb  03_feature_engineering.ipynb
src/: main.py
src/app/: streamlit_app.py
src/app/components/: result_card.py
src/etl/: extract.py  load.py  run_etl.py  transform.py
src/feature_engineering/: add_features.py
src/rag/: data_tool.py  ingest.py  rag.py  rag_logic.py
src/rag/tools/: __init__.py  csv_analysis.py  viz_tool.py
